# vpixels

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  VP_VERSION  configure.ac
cmake/: FindLuaExe.cmake  Makefile.am  SetVersionNumber.cmake  config.h.in  setup.py.in
example/: Makefile.am
example/bmp/: CMakeLists.txt  Makefile.am
example/cpp/: BmpInfo.cpp  CMakeLists.txt  GifDownsize.cpp  GifImages.cpp  GifInfo.cpp  Makefile.am
example/gif/: CMakeLists.txt  Makefile.am
example/img/: Makefile.am
example/lua/: Makefile.am  circularity.lua  hourglass.lua
example/py/: Makefile.am  circularity.py  hourglass.py
include/: Makefile.am
include/vp/: Bmp.h  Exception.h  Gif.h  GifImage.h  Makefile.am
src/: CMakeLists.txt  Makefile.am
src/bmp/: Bmp.cpp  BmpColorTable.cpp  BmpColorTable.h  BmpFileHeader.cpp  BmpFileHeader.h  BmpImageData.cpp  BmpImageData.h  BmpImpl.cpp  BmpImpl.h  BmpInfo.cpp  BmpInfo.h  BmpInfo1Bit.cpp  BmpInfo1Bit.h  BmpInfo24Bit.cpp  BmpInfo24Bit.h  BmpInfo4Bit.cpp  BmpInfo4Bit.h  BmpInfo8Bit.cpp  BmpInfo8Bit.h  BmpInfoHeader.cpp  BmpInfoHeader.h  CMakeLists.txt  Makefile.am
src/gif/: CMakeLists.txt  Gif.cpp  GifApplicationExt.cpp  GifApplicationExt.h  GifBlockIO.h  GifCodeReader.cpp  GifCodeReader.h  GifCodeWriter.cpp  GifCodeWriter.h  GifColorTable.cpp  GifColorTable.h  GifCommentExt.cpp  GifCommentExt.h  GifComponent.cpp  GifComponent.h  GifComponentVecUtil.cpp  GifComponentVecUtil.h  GifDecoder.cpp  GifDecoder.h  GifEncoder.cpp  GifEncoder.h  GifExtension.h  GifGraphicsControlExt.cpp  GifGraphicsControlExt.h  GifHeader.cpp  GifHeader.h  GifImage.cpp  GifImageData.cpp  GifImageData.h  GifImageDescriptor.cpp  GifImageDescriptor.h  GifImageImpl.cpp  GifImageImpl.h  GifImageVecBuilder.cpp  GifImageVecBuilder.h  GifImpl.cpp  GifImpl.h  GifPlainTextExt.cpp  GifPlainTextExt.h  GifScreenDescriptor.cpp  (+6 more)
src/lua/: CMakeLists.txt  LuaBmp.cpp  LuaBmp.h  LuaDerive.cpp  LuaDerive.h  LuaGif.cpp  LuaGif.h  LuaGifDefs.h  LuaGifImage.cpp  LuaGifImage.h  LuaModule.cpp  LuaUtil.cpp  LuaUtil.h  Makefile.am
src/py/: CMakeLists.txt  Makefile.am  PyBmp.cpp  PyBmp.h  PyGif.cpp  PyGif.h  PyGifDefs.h  PyGifImage.cpp  PyGifImage.h  PyModule.cpp  PyUtil.h  setup.py.in
src/util/: Exception.cpp  IOutil.h  Makefile.am  SimpleList.h  Util.cpp  Util.h
test/: Makefile.am  UnitTestMain.cpp
test/bmp/: BmpColorTableTest.cpp  BmpColorTableTest.h  BmpFileHeaderTest.cpp  BmpFileHeaderTest.h  BmpImageDataTest.cpp  BmpImageDataTest.h  BmpImplTest.cpp  BmpImplTest.h  BmpInfo1BitTest.cpp  BmpInfo1BitTest.h  BmpInfo24BitTest.cpp  BmpInfo24BitTest.h  BmpInfo4BitTest.cpp  BmpInfo4BitTest.h  BmpInfo8BitTest.cpp  BmpInfo8BitTest.h  BmpInfoHeaderTest.cpp  BmpInfoHeaderTest.h  BmpInfoTest.cpp  BmpInfoTest.h  BmpTest.cpp  BmpTest.h  CMakeLists.txt  Makefile.am
test/gif/: CMakeLists.txt  GifApplicationExtTest.cpp  GifApplicationExtTest.h  GifBlockIOTest.cpp  GifBlockIOTest.h  GifCodeReaderTest.cpp  GifCodeReaderTest.h  GifCodeWriterTest.cpp  GifCodeWriterTest.h  GifColorTableTest.cpp  GifColorTableTest.h  GifCommentExtTest.cpp  GifCommentExtTest.h  GifComponentTest.cpp  GifComponentTest.h  GifComponentVecUtilTest.cpp  GifComponentVecUtilTest.h  GifDecoderTest.cpp  GifDecoderTest.h  GifEncoderDecoderTest.cpp  GifEncoderDecoderTest.h  GifEncoderTest.cpp  GifEncoderTest.h  GifGraphicsControlExtTest.cpp  GifGraphicsControlExtTest.h  GifHeaderTest.cpp  GifHeaderTest.h  GifImageDataTest.cpp  GifImageDataTest.h  GifImageDescriptorTest.cpp  GifImageDescriptorTest.h  GifImageTest.cpp  GifImageTest.h  GifImageVecBuilderTest.cpp  GifImageVecBuilderTest.h  GifImplTest.cpp  GifImplTest.h  GifScreenDescriptorTest.cpp  GifScreenDescriptorTest.h  GifStringTableTest.cpp  (+5 more)
test/lua/: BmpTest.lua  CMakeLists.txt  DeriveTest.lua  GifTest.lua  Makefile.am
test/py/: BmpTest.py  CMakeLists.txt  GifTest.py  Makefile.am
test/util/: CMakeLists.txt  IOutilTest.cpp  IOutilTest.h  Makefile.am  SimpleListTest.cpp  SimpleListTest.h  UtilTest.cpp  UtilTest.h
